fix weird issues with margins and spacing

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,7 +1,7 @@
 #active_map {
   @include size(65% 600px);
   @include position(relative auto);
-  margin: 0 0 20px 20px;
+  margin: 0 0 1.5% 1.5%;
   padding-right: 10px;
   float: left;
 }
