--- a/app/assets/stylesheets/refills/_grad.scss
+++ b/app/assets/stylesheets/refills/_grad.scss
@@ -151,7 +151,7 @@
 }
 
 #bottom {
-  margin-top: -100px;
+  margin-top: -8%;
 }
 
 #or {
